<resources>
    <eat-comment>MainActivity Base</eat-comment>
    <string name="app_name">PlanDeCoupe</string>
    <string name="title_activity_main">Plan de Decoupe</string>
    <string name="demo">Démo</string>
    <string name="demo_paire">Démo Paire</string>
    <string name="demo_random">Démo Optimiser Lamination</string>
    <string name="butReglages">Réglages Production</string>
    <string name="butCredit">Crédits</string>
    <string name="app_reglages">Réglages Production</string>
    <string name="app_result">Résultats</string>
    <string name="app_credit">Informations</string>
    <string name="app_demo">Mode Démonstration</string>
    <string name="textQuit">Sortie de programme :</string>
    <string name="textReally_quit">Voulez-vous quitter l\'application ?</string>
    <string name="butYes">Oui</string>
    <string name="butNo">Non</string>

    <eat-comment>MainActivity Reglages</eat-comment>
    <string name="hintLaizeBobineMere">Laize Bobine Mère\nou Lamination\n(défaut: 1300)</string>
    <string name="butLaizeBobineMere">Valider Laize</string>
    <string name="hintLisiereGauche">Chute Gauche\n(défaut: 30mm)</string>
    <string name="hintLisiereDroite">Chute Droite\n(défaut: 30mm)</string>
    <string name="butLisiere">Valider Lisière</string>
    <string name="hintNbCouteaux">Nb couteaux\n(défaut: 15)</string>
    <string name="hintNbCouteauxM">Pas de limite \ncouteaux</string>
    <string name="butNbCouteaux">Valider Nb Couteaux</string>
    <string name="hintLisiereRecoupeGauche">Chute Gauche\nRecoupe\n(défaut: 10mm)</string>
    <string name="hintLisiereRecoupeGaucheM">Pas de Recoupe</string>
    <string name="hintLisiereRecoupeDroite">Chute Droite\nRecoupe\n(défaut: non utilisé)</string>
    <string name="hintLisiereRecoupeDroiteM">Pas de Recoupe</string>
    <string name="butLisiereRecoupe">Valider Lisière Recoupe</string>
    <string name="butSwitchCalc">Mode Coupe Mandrin</string>
    <string name="butCommande">Suivant</string>
    <string name="laize_manquante">Laize manquante</string>
    <string name="lisieres_manquantes">Chutes manquantes</string>
    <string name="couteaux_manquants">Nb de couteaux manquant</string>
    <string name="lisieres_recoupe_manquantes">Chutes manquantes pour la recoupe</string>
    <string name="butRetour">Retour</string>
    <string name="autres">Autres...</string>

    <eat-comment>CommandeActivity</eat-comment>
    <string name="hintNbLaizeDiff">Nombre de laizes différentes</string>
    <string name="butNbLaizeDiff">Valider Nb</string>
    <string name="hintLaizeOrder">Laize Bobinot</string>
    <string name="checkBoxPaire">Coupe par Paire</string>
    <string name="hintQuantiteOrder">Nbre pour cette laize</string>
    <string name="butAjouter">Ajouter</string>
    <string name="butCalculer">Calculer</string>
    <string name="nbLaizeDiff_manquant">Nb de laizes différentes manquant</string>
    <string name="order_manquant">Laize manquante ou Nb manquant pour cette laize</string>
    <string name="erreur_impaire">nb de bobinots impaire</string>
    <string name="mode_mandrin">Mode Mandrin</string>
    <string name="mode_bobinot">Mode Bobinot</string>
    <string name="nombre_commande">Nombre de Commande</string>
    <string name="commande">commande</string>


    <eat-comment>BCActivity et BCPaireActivity</eat-comment>
    <string name="pertes1">Chutes restantes (hors chutes gauche</string>
    <string name="pertes2">et droite</string>
    <string name="pertes3">et hors recoupe</string>
    <string name="pertes4">de bobine</string>
    <string name="pertes5">total</string>
    <string name="pertes6">dont</string>
    <string name="pertes7">en recoupe</string>
    <string name="pertes8">soit</string>
    <string name="pertes9">mm à remettre en stock, pas de chute droite.</string>

    <string name="logLam1">Bobine</string>
    <string name="loglam2">de laize</string>
    <string name="loglam3">déduire chutes de chaques cotés</string>
    <string name="loglam4">mm et</string>
    <string name="loglam5">Nb de bobinots atteint pour ce run et laize restante</string>
    <string name="loglam6">prévoir d\'enlever</string>
    <string name="loglam7">mm de chutes en recoupe.</string>
    <string name="loglam8">en 2ème recoupe"</string>
    <string name="loglam9">mm) : nb de bobinot atteint pour ce run et laize restante</string>
    <string name="loglam10">Laize restante</string>
    <string name="loglam11">Bobinot en coupe</string>
    <string name="loglam12">Bobinot en recoupe</string>
    <string name="loglam13">Nouvelle bobine</string>
    <string name="loglam14">et</string>

    <string name="planDeCoupe1">recoupe Bobine</string>
    <string name="planDeCoupe2">2 ème recoupe Bobine </string>

    <string name="planBobineMere1">Bobine</string>
    <string name="planBobineMere2">bob</string>
    <string name="planBobineMere3">bob en recoupe</string>
    <string name="planBobineMere4">Des bobinots ne sont pas passés</string>

    <string name="afficher_reglages">Afficher les Réglages</string>
    <string name="afficher_commande">Afficher la Commande</string>
    <string name="afficher_planDeCoupe">Afficher le Plan de Coupe</string>
    <string name="afficher_pertes">Afficher les Pertes</string>
    <string name="afficher_detailsCalcul">Afficher les Détails de Calcul</string>

    <string name="listeReglages_laizeLamination">Laize lamination</string>
    <string name="listeReglages_lisiereGauche">Lisière Gauche</string>
    <string name="listeReglages_lisisereDroite">Lisière Droite</string>
    <string name="listeReglages_nombreCouteaux1">Nombre de Couteaux</string>
    <string name="listeReglages_nombreCouteaux2">soit</string>
    <string name="listeReglages_lisiereGaucheRecoupe">Lisière Gauche pour la Recoupe</string>
    <string name="listeReglages_nbBobineMere1">Nombre bobine mère</string>
    <string name="listeReglages_nbBobineMere2">de laize</string>
    <string name="listeReglages_totalBobinotsCommandes">Total bobinots commandés</string>
    <string name="listeReglages_totalBobinotsProduits">Total bobinots produits</string>
    <string name="listeReglages_totalBobinotsTropLarges1">Total bobinots trop larges</string>
    <string name="listeReglages_totalBobinotsTropLarges2">Ces bobinots ne sont pas passés</string>
    <string name="listeReglages_nbMandrinMere">Nombre Mandrins Mère</string>
    <string name="listeReglages_totalMandrinsCommandes">Total mandrins commandés</string>
    <string name="listeReglages_totalMandinsProduits">Total mandrins produits</string>
    <string name="listeReglages_mandrinActif">Rappel : mode Mandrin Actif</string>

    <eat-comment>AfficheBCRandomActivity</eat-comment>
    <string name="textView_tauxPertes">En vert, le meilleur taux de pertes.</string>
    <string name="textView_tauxChgtBobine">En jaune le meilleur taux de changement bobine.</string>
    <string name="liste_des_essais">Liste des essais</string>
    <string name="texte_commande">Commande</string>
    <string name="confirmBinCutting_title">Voulez-vous lancez ce choix ?</string>
    <string name="confirmBinCutting_text">Choix lancé</string>

    <eat-comment>RandomListe</eat-comment>
    <string name="item_Texte1">Nb de bobines Mère</string>
    <string name="item_Texte2">de laize</string>
    <string name="item_Texte3">total des pertes</string>
    <string name="item_Texte4">avec</string>
    <string name="item_Texte5">recoupes bobine</string>
    <string name="item_Texte6">Soit</string>
    <string name="item_Texte7">changement de bobine</string>
</resources>