<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kazuyevon.laminateur.MainActivity">
    <item
        android:id="@+id/mode_demo"
        android:orderInCategory="70"
        android:title="@string/demo"
        app:showAsAction="never" />
    <item
        android:id="@+id/mode_demo_paire"
        android:orderInCategory="80"
        android:title="@string/demo_paire"
        app:showAsAction="never" />

    <item
        android:id="@+id/mode_demo_random"
        android:orderInCategory="90"
        android:title="@string/demo_random"
        app:showAsAction="never" />

    <item
        android:id="@+id/mode_credit"
        android:orderInCategory="100"
        android:title="@string/butCredit"
        app:showAsAction="never" />

</menu>
