<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kazuyevon.laminateur.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_LaizeBobineMere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/but_LaizeBobineMere"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignTop="@+id/but_LaizeBobineMere"
                android:layout_toLeftOf="@+id/but_LaizeBobineMere"
                android:layout_toStartOf="@+id/but_LaizeBobineMere"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hintLaizeBobineMere"
                android:inputType="number"
                android:textSize="12sp" />

            <Button
                android:id="@+id/but_LaizeBobineMere"
                style="@style/MyButtons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/butLaizeBobineMere"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/edittext_LisiereGauche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/but_Lisiere"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/but_Lisiere"
                android:layout_below="@+id/edittext_LaizeBobineMere"
                android:layout_toLeftOf="@+id/but_Calc"
                android:layout_toStartOf="@+id/but_Calc"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hintLisiereGauche"
                android:inputType="number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edittext_LisiereDroite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/but_Lisiere"
                android:layout_alignEnd="@+id/edittext_LaizeBobineMere"
                android:layout_alignLeft="@+id/but_Calc"
                android:layout_alignRight="@+id/edittext_LaizeBobineMere"
                android:layout_alignStart="@+id/but_Calc"
                android:layout_alignTop="@+id/but_Lisiere"
                android:layout_below="@+id/edittext_LaizeBobineMere"
                android:layout_toEndOf="@+id/edittext_LisiereGauche"
                android:layout_toLeftOf="@+id/but_Lisiere"
                android:layout_toRightOf="@+id/edittext_LisiereGauche"
                android:layout_toStartOf="@+id/but_Lisiere"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hintLisiereDroite"
                android:inputType="number"
                android:textSize="12sp" />

            <Button
                android:id="@+id/but_Lisiere"
                style="@style/MyButtons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/but_LaizeBobineMere"
                android:layout_toEndOf="@+id/edittext_LaizeBobineMere"
                android:layout_toRightOf="@+id/edittext_LaizeBobineMere"
                android:text="@string/butLisiere"
                android:textSize="10sp" />

            <!-- Continuer a ranger -->

            <EditText
                android:id="@+id/edittext_NbCouteaux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/but_NbCouteaux"
                android:layout_alignEnd="@+id/edittext_LaizeBobineMere"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/edittext_LaizeBobineMere"
                android:layout_alignTop="@+id/but_NbCouteaux"
                android:layout_toLeftOf="@+id/but_NbCouteaux"
                android:layout_toStartOf="@+id/but_NbCouteaux"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hintNbCouteaux"
                android:inputType="number"
                android:textSize="12sp" />

            <Button
                android:id="@+id/but_NbCouteaux"
                style="@style/MyButtons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/but_Lisiere"
                android:layout_toEndOf="@+id/edittext_LaizeBobineMere"
                android:layout_toRightOf="@+id/edittext_LaizeBobineMere"
                android:text="@string/butNbCouteaux"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/edittext_LisiereRecoupeGauche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/but_LisiereRecoupe"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/but_LisiereRecoupe"
                android:layout_below="@+id/edittext_NbCouteaux"
                android:layout_toLeftOf="@+id/but_Calc"
                android:layout_toStartOf="@+id/but_Calc"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hintLisiereRecoupeGauche"
                android:inputType="number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edittext_LisiereRecoupeDroite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/but_LisiereRecoupe"
                android:layout_alignEnd="@+id/edittext_LaizeBobineMere"
                android:layout_alignLeft="@+id/but_Calc"
                android:layout_alignRight="@+id/edittext_LaizeBobineMere"
                android:layout_alignStart="@+id/but_Calc"
                android:layout_alignTop="@+id/but_LisiereRecoupe"
                android:layout_below="@+id/edittext_NbCouteaux"
                android:layout_toEndOf="@+id/edittext_LisiereRecoupeGauche"
                android:layout_toLeftOf="@+id/but_LisiereRecoupe"
                android:layout_toRightOf="@+id/edittext_LisiereRecoupeGauche"
                android:layout_toStartOf="@+id/but_LisiereRecoupe"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hintLisiereRecoupeDroite"
                android:inputType="number"
                android:textSize="12sp" />

            <Button
                android:id="@+id/but_LisiereRecoupe"
                style="@style/MyButtons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/but_NbCouteaux"
                android:layout_toEndOf="@+id/edittext_LaizeBobineMere"
                android:layout_toRightOf="@+id/edittext_LaizeBobineMere"
                android:text="@string/butLisiereRecoupe"
                android:textSize="10sp" />

            <Switch
                android:id="@+id/switch_Calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edittext_LisiereRecoupeGauche"
                android:layout_marginTop="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/butSwitchCalc" />

            <Button
                android:id="@+id/but_Calc"
                style="@style/MyButtons"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|center"
                android:enabled="false"
                android:text="@string/butCommande"
                android:textSize="12sp" />

            <fragment android:name="com.kazuyevon.laminateur.fragment.LaizesMereFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_LaizesMere"
                android:layout_toLeftOf="@+id/but_LaizeBobineMere"
                android:layout_toStartOf="@+id/but_LaizeBobineMere"
                tools:layout="@layout/fragment_laizesmere" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
